examples/test/testpolicy13649.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13649
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key30: value39
      key22: value25
      key5: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value44
      podSelector:
        matchLabels:
          key22: value16
